--- a/w-wave/css/style.css
+++ b/w-wave/css/style.css
@@ -190,11 +190,31 @@ a {
 
 .popup-login__subtitle a {
     color: var(--primary);
+    transition: color .3s ease;
+}
+
+@media (min-width:992px) {
+    .popup-login__subtitle a:hover {
+        color: var(--primary_light);
+    }
+}
+
+.popup-login__subtitle a:active {
+    color: var(--primary_shade);
 }
 
 .popup-login__form {
     margin-bottom: 30px;
 }
+
+.popup-login__form-label {
+    position: relative;
+}
+
+.popup-login__form-label .js-validate-error-label {
+    display: none;
+}
+
 
 .popup-login__form-input {
     display: block;
@@ -943,7 +963,6 @@ a {
     }
 
     .menu__list {
-        overflow: auto;
         justify-content: flex-start;
         max-width: 280px;
     }
@@ -1308,7 +1327,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 94px 0;
+    padding: 37px 0;
 }
 
 .hero__img {
@@ -1325,7 +1344,7 @@ a {
 
 .hero__title span {
     font-style: italic;
-    font-weight: 400;
+    font-weight: 700;
     font-size: 60px;
 }
 
@@ -1489,7 +1508,7 @@ a {
 
 .podcasts {
     background: #E6E8EC;
-    padding: 94px 0;
+    padding: 91px 0;
 }
 
 .podcasts__title {
@@ -1587,7 +1606,7 @@ a {
 }
 
 .item-podcasts__date {
-    z-index: 2;
+    z-index: 3;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -1616,7 +1635,7 @@ a {
 }
 
 .item-podcasts__bottom {
-    padding: 10px 0 6px 0;
+    padding: 6px 0 6px 0;
 }
 
 .item-podcasts__bottom-item {
@@ -1909,6 +1928,7 @@ a {
 .choices {
     width: 255px;
     font-family: inherit;
+    font-size: 16px;
 }
 
 .choices.is-open {
@@ -1919,10 +1939,20 @@ a {
 
 .choices__list--dropdown .choices__item {
     color: var(--grey);
+    transition: color .3s ease;
+}
+
+.choices__list--dropdown .choices__item,
+.choices__list[aria-expanded] .choices__item {
+    font-size: 16px;
+}
+
+.choices__list--dropdown .choices__item:hover {
+    color: var(--black);
 }
 
 .choices__list--dropdown .is-selected {
-    color: var(--black);
+    display: none;
 }
 
 .choices[data-type*=select-one]:after {
@@ -1945,6 +1975,7 @@ a {
     position: relative;
     background-color: #E6E8EC;
     padding-top: 11px;
+    font-size: 16px;
     border-radius: 10px;
     z-index: 2;
     transition: background-color .3s ease;
@@ -2003,7 +2034,7 @@ a {
     font-weight: 500;
     font-size: 16px;
     color: var(--black);
-    padding: 12px 45px;
+    padding: 9px 42px;
     border: 2px solid #121723;
     border-radius: 77px;
 }
@@ -2019,11 +2050,16 @@ a {
     line-height: 150%;
 }
 
+.broadcasts-col-1__item-descr span {
+    font-weight: 700;
+}
+
 .broadcasts-col-2 {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
     max-width: 825px;
+    padding-top: 14px;
 }
 
 .brdcsr-item {
@@ -2064,7 +2100,7 @@ a {
     background: #FFFFFF;
     border-bottom: 1px solid #E6E8EC;
     border-right: 1px solid #E6E8EC;
-    padding: 20px 16px;
+    padding: 18px 16px 17px 16px;
 }
 
 .brdcsr-item__title {
@@ -2125,7 +2161,9 @@ a {
     fill: var(--primary_shade);
 }
 
-
+.brdcsr-item:focus-visible {
+    border: 1px solid var(--primary);
+}
 
 .btn-effect:active>.broadcasts-col-1__item-btn-svg path {
     stroke: var(--white);
@@ -2469,7 +2507,7 @@ a {
 }
 
 .item-guests__social {
-    margin-bottom: 14px;
+    margin-bottom: 12px;
 }
 
 .item-guests__social-item {
@@ -2511,7 +2549,7 @@ a {
 .item-guests__btn {
     cursor: pointer;
     display: inline-block;
-    padding: 12px 19.5px;
+    padding: 9px 16.5px;
     font-weight: 500;
     font-size: 16px;
     color: var(--primary_light);
@@ -2698,7 +2736,7 @@ a {
 
 .sub__title::after {
     position: absolute;
-    bottom: 0;
+    bottom: -5%;
     left: 0;
     width: 100%;
     content: url('../img/subscription/line.svg');
@@ -2735,7 +2773,7 @@ a {
 }
 
 .sub__btn {
-    padding: 25px 13.5px;
+    padding: 22px 11.5px;
     font-weight: 500;
     color: var(--yellow);
     border: 2px solid var(--yellow);
@@ -3023,12 +3061,24 @@ a {
     flex-wrap: wrap;
     gap: 30px;
     max-width: 730px;
+    padding-top: 15px;
 }
 
 
 .playlists-item {
     cursor: pointer;
     position: relative;
+}
+
+.playlists-item__play-btn {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    z-index: 5;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: opacity .3s ease;
 }
 
 @media (min-width:992px) {
@@ -3042,6 +3092,11 @@ a {
         color: var(--white);
     }
 
+    .playlists-item:hover>.playlists-item__play-btn {
+        opacity: 1;
+        visibility: visible;
+    }
+
     .playlists-item:hover>.playlists-item__body span {
         color: var(--white);
     }
@@ -3049,6 +3104,10 @@ a {
     .playlists-item:hover>.playlists-item__image::before {
         opacity: 0.6;
     }
+}
+
+.playlists-item:active>.playlists-item__body {
+    background-color: var(--primary_shade);
 }
 
 .playlists-item__image::before {
@@ -3071,6 +3130,7 @@ a {
 }
 
 .playlists-item__image-1 {
+    font-size: 0;
     background: url('../img/playlists/image_1.png') center / cover no-repeat;
 }
 
@@ -3121,14 +3181,14 @@ a {
 .playlists-item__body {
     max-width: 160px;
     border: 1px solid #E6E8EC;
-    padding: 16px;
+    padding: 14px;
     transition: background-color .3s ease, color .3s ease;
 }
 
 .playlists-item__title {
     font-size: 16px;
     font-weight: 500;
-    margin-bottom: 4px;
+    margin-bottom: -2px;
 }
 
 .playlists-item__subtitle {
@@ -3456,6 +3516,7 @@ a {
 
 .about {
     padding: 94px 0;
+    padding-bottom: 100px;
     background: var(--black);
 }
 
@@ -3581,10 +3642,14 @@ a {
     color: var(--grey);
 }
 
-.about__form-input {
-    position: relative;
+.about__form-label {
     flex: 0 1 48.37%;
+    position: relative;
+}
+
+.about__form-input {
     height: 70px;
+    width: 100%;
     padding: 25px 30px;
     border: 1px solid #FFFFFF;
     border-radius: 40px;
@@ -3608,7 +3673,11 @@ a {
 }
 
 .js-validate-error-label {
-    display: none;
+    position: absolute;
+    top: 12.85%;
+    left: 7.19%;
+    font-size: 12px;
+    line-height: 1;
 }
 
 .about__form-input::placeholder {
@@ -3619,10 +3688,10 @@ a {
 .about__form-btn {
     font-weight: 500;
     color: var(--white);
-    padding: 25px 54px;
+    padding: 22px 54px;
     background: #6D31EE;
     border-radius: 40px;
-    margin-bottom: 33px;
+    margin-bottom: 36px;
     transition: background-color .3s ease;
 }
 
@@ -3875,7 +3944,7 @@ a {
 .footer__list {
     display: flex;
     flex-wrap: wrap;
-    max-width: 400px;
+    max-width: 446px;
 }
 
 .footer__item {
@@ -3886,7 +3955,31 @@ a {
     margin-bottom: 20px;
 }
 
+@media (min-width:480px) {
+    .footer__item:nth-child(2) {
+        padding-left: 36px;
+    }
 
+    .footer__item:nth-child(5) {
+        padding-left: 36px;
+    }
+
+    .footer__item:nth-child(8) {
+        padding-left: 36px;
+    }
+
+    .footer__item:nth-child(3) {
+        padding-left: 83px;
+    }
+
+    .footer__item:nth-child(6) {
+        padding-left: 83px;
+    }
+
+    .footer__item:nth-child(9) {
+        padding-left: 83px;
+    }
+}
 
 .footer__link {
     font-size: 16px;
